--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-  "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-  "dev": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-  "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
